# virtual-accelerator

./: .gitignore  .pre-commit-config.yaml  README.md  model_config.yaml  pyproject.toml
.github/workflows/: lint.yml  test-bmad.yml  test-cheetah.yml  test-core.yml  test-surrogate.yml  tests.yml
.submodules/repo/: model_config.yaml
.submodules/repo/docs/examples/: info.ipynb
.submodules/repo/docs/examples/info/: normalization.json
.submodules/repo/examples/: lumetorchmodel_usage_example.py
docs/examples/: info.ipynb
examples/: bmad_model_example.ipynb  cheetah_diag0_model.ipynb  cheetah_model_example.ipynb  facet2_model_example.ipynb  injector_surrogate.ipynb  lumetorchmodel_usage_example.py  staged_example.ipynb
subtrees/docs/examples/: lume_model_epics.ipynb
subtrees/lcls_cu_injector_ml_model/: .gitignore  README.md
subtrees/lcls_cu_injector_ml_model/docs/examples/: lume_model_epics.ipynb
subtrees/lcls_cu_injector_ml_model/docs/examples/info/: model.json  pv_mapping.json
subtrees/lcls_cu_injector_ml_model/examples/: README.md  lumetorchmodel_usage_example.py
subtrees/lcls_cu_injector_model/examples/: README.md
virtual_accelerator/: _version.py  variable_config.yaml
virtual_accelerator/beams/: PR10241_impact_10000.h5
virtual_accelerator/bmad/: actions.py  bmad_set_beam2000_pg  cu_transformer.py  factory.py  make_lume_yaml.py  prototype.py  test_beam  utils.py  variables.py
virtual_accelerator/cheetah/: actions.py  diag0.py  generation.py  generator.py  simulator.py  slac_variable_config.yaml  transformer.py  utils.py  variables.py
virtual_accelerator/examples/: bmad_model_example.ipynb  cheetah_model_example.ipynb
virtual_accelerator/models/: cu_hxr.py  facet.py  facet2.py  runners.py  sc_diag0.py  staged_model.py  static_model.py
virtual_accelerator/surrogates/: augmentation_schema.yaml  augmentations.py  beam_output.py  covariance.py  facet_injector_surrogate.py  injector_surrogate.py  lcls_cu_injector_model
virtual_accelerator/tests/: __init__.py  _bmad_model_test_utils.py  conftest.py  dependency_profiles.py  test_bmad.py  test_cheetah_actions.py  test_cheetah_imports.py  test_cheetah_models.py  test_cu_hxr.py  test_facet.py  test_facet_staged_model.py  test_optional_dependencies.py  test_staged_model.py  test_static_model.py  test_surrogates.py
virtual_accelerator/utils/: cu_hxr_elements_to_device  cu_hxr_profmon_info.yaml  facet2_profmon_info.yaml  generate_slac_variable_config.py  optional_dependencies.py  slac_variable_config.yaml  variables.py
(+1 files in other folders)
